--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User App</title>
+    <title>Movie Tracker</title>
 </head>
 <body>
     <nav>
         <ul><% if (user) { %>
+            <li>
+                <a href="/">Home</a>
+            </li>
             <li>
                 <a href="/users/profile">Profile</a>
             </li>
@@ -18,6 +21,9 @@
 
         <% } else { %>
             <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
                 <a href="/users/new">Sign Up</a>
             </li>
             <li>
@@ -26,7 +32,7 @@
         <% } %>
         </ul>
     </nav>
-    <h1>Hello user, welcome to the User App</h1>
+    <h1>Welcome to Movie Tracker</h1>
     <%- body %>
 </body>
 </html>
