--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -10,3 +10,4 @@
     <input id="password" type="password" name="password" required>
     <button type="submit">Login</button>
 </form>
+<p>If you don't have an account, click <a href="/users/new">here</a> to sign up</p>
