--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,11 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Tracker</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30">
+            </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <% if (user) { %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/profile">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/logout">Logout</a>
+                </li>
+              <% } else { %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/profile">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/logout">Login</a>
+                </li>
+                <% } %>
+            </ul>
+            <form class="d-flex" method="GET" action="/movies">
+              <input class="form-control me-2" type="search" placeholder="movie title" aria-label="Search" name="s" required/>
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+    </nav>
+    
+
+    <!-- <nav class="navbar navbar-expand-lg bg-light">
         <ul><% if (user) { %>
             <li>
                 <a href="/">Home</a>
@@ -31,8 +67,9 @@
             </li>
         <% } %>
         </ul>
-    </nav>
-    <h1>Welcome to Movie Tracker</h1>
+    </nav> -->
+    <!-- <h1>Welcome to Movie Tracker</h1> -->
     <%- body %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
