--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="/users/profile">Sign Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/logout">Login</a>
+                    <a class="nav-link" href="/users/login">Login</a>
                 </li>
                 <% } %>
             </ul>
