change layout of watchlist in home.ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,7 @@
                 </li>
               <% } else { %>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/profile">Sign Up</a>
+                    <a class="nav-link" href="/users/new">Sign Up</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/users/login">Login</a>
