--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% if (message) { %>
     <p> <%= message %></p>
 <% } %>
-
+<!-- 
 <form action="/users/login" method ='POST'>
     <label for="email">Email</label>
     <input id="email" type="email" name="email" required>
@@ -10,7 +10,7 @@
     <input id="password" type="password" name="password" required>
     <button type="submit">Login</button>
 </form>
-<p>If you don't have an account, click <a href="/users/new">here</a> to sign up</p>
+<p>If you don't have an account, click <a href="/users/new">here</a> to sign up</p> -->
 
 <form action="/users/login" method ='POST'>
     <div class="mb-3">
@@ -22,9 +22,5 @@
       <label for="exampleInputPassword1" class="form-label">Password</label>
       <input type="password" class="form-control" id="exampleInputPassword1" name="password" required>
     </div>
-    <div class="mb-3 form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Login</button>
   </form>
