add bootstrap to Login and sign up forms

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,4 +1,4 @@
-<form action="/users" method ='POST'>
+<!-- <form action="/users" method ='POST'>
     <label for="name">Name</label>
     <input id="name" type="name" name="name" required>
 
@@ -11,4 +11,26 @@
     <label for="country">Country</label>
     <input id="country" type="country" name="country" required>
     <button type="submit">Sign Up</button>
-</form>
+</form> -->
+
+<form class="row g-3">
+    <div class="col-md-6">
+        <label for="name" class="form-label">Name</label>
+        <input type="name" class="form-control" id="name" name="name" required>
+    </div>
+    <div class="col-md-6">
+        <label for="country" class="form-label">Country</label>
+        <input type="email" class="form-control" id="country" name="country" required>
+    </div>
+    <div class="col-md-6">
+      <label for="inputEmail4" class="form-label">Email</label>
+      <input type="email" class="form-control" id="inputEmail4" name="email" required>
+    </div>
+    <div class="col-md-6">
+      <label for="inputPassword4" class="form-label">Password</label>
+      <input type="password" class="form-control" id="inputPassword4" name="password" required>
+    </div>
+    <div class="col-12">
+      <button type="submit" class="btn btn-primary">Sign Up</button>
+    </div>
+  </form>
