--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -12,7 +12,7 @@
     <input id="country" type="country" name="country" required>
     <button type="submit">Sign Up</button>
 </form> -->
-
+<div class="container">
 <form class="row g-3">
     <div class="col-md-6">
         <label for="name" class="form-label">Name</label>
@@ -34,3 +34,4 @@
       <button type="submit" class="btn btn-primary">Sign Up</button>
     </div>
   </form>
+</div>
