updated get profile route in users.js for newly registered users

--- a/views/movies/detail.ejs
+++ b/views/movies/detail.ejs
@@ -4,9 +4,8 @@
         <img src = <%= movie.Poster %> height="400">
     </div>
     <div class="col-8">
-        <p>Title: <%= movie.Title %></p>
+        <p><%= movie.Title %> (<%= movie.Year %>)</p>
         <p>Genre: <%= movie.Genre %></p>
-        <p>Year: <%= movie.Year %></p>
         <p>Director: <%= movie.Director %></p>
         <p>Actors: <%= movie.Actors %></p>
         <p>Synopsis: <%= movie.Plot %></p>
