--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-<% if (user) { %>
+<% if (user && user.watchedmovies) { %>
     <div class="container text-center">
         <h3>Watched Movies:</h3>
     <div class="row">
@@ -32,7 +32,7 @@
     </div>
     <% } %>
 
-    <% if (user) { %>
+    <% if (user && user.watchedmovies) { %>
         <div class="container text-center">
             <h3><%= user.name %>'s Watchlists:</h3>
         <div class="row">
