--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,3 +1,5 @@
+
+<div class="container">
 <% if (message) { %>
     <p> <%= message %></p>
 <% } %>
@@ -24,3 +26,5 @@
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
+
+</div>
