--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,26 +1,13 @@
-<!-- <form action="/users" method ='POST'>
-    <label for="name">Name</label>
-    <input id="name" type="name" name="name" required>
 
-    <label for="email">Email</label>
-    <input id="email" type="email" name="email" required>
-
-    <label for="password">Password</label>
-    <input id="password" type="password" name="password" required>
-
-    <label for="country">Country</label>
-    <input id="country" type="country" name="country" required>
-    <button type="submit">Sign Up</button>
-</form> -->
 <div class="container">
-<form class="row g-3">
+<form class="row g-3" form action="/users" method ='POST'>
     <div class="col-md-6">
         <label for="name" class="form-label">Name</label>
         <input type="name" class="form-control" id="name" name="name" required>
     </div>
     <div class="col-md-6">
         <label for="country" class="form-label">Country</label>
-        <input type="email" class="form-control" id="country" name="country" required>
+        <input type="text" class="form-control" id="country" name="country" required>
     </div>
     <div class="col-md-6">
       <label for="inputEmail4" class="form-label">Email</label>
