--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,7 +34,7 @@
 
     <% if (user && user.watchedmovies) { %>
         <div class="container text-center">
-            <h3><%= user.name %>'s Watchlists:</h3>
+            <h3><%= user.name %>'s Watchlist:</h3>
         <div class="row">
             <% user.watchlists.forEach((movie) => { %>
           <div class="col-2">
