--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -14,7 +14,7 @@
 
 
         <div class="container text-center">
-            <h3><%= user.name %>'s Watchlists:</h3>
+            <h3><%= user.name %>'s Watchlist:</h3>
         <div class="row">
             <% user.watchlists.forEach((movie) => { %>
           <div class="col-2">
