--- a/views/movies/detail.ejs
+++ b/views/movies/detail.ejs
@@ -43,11 +43,19 @@
   </div>
 
   <h3>Movie Review</h3>
+  <% if (comments) { %>
+    <% comments.forEach((comment) => { %>
+        <p><%= comment.users.name %> <%= comment.createdAt %> </p>
+        <div>
+            <%= comment.content %>
+        </div>
+        <% })%>
+ <% }%>
+
   <div class="mb-3">
     <form action="/comments" method ='POST'>
         <div class="mb-3">
             <input hidden id="movieId" type="text" name="movieId" value="<%= movie.imdbID %>">
-            <input hidden id="user" type="text" name="user" value="<%= user %>">
             <label for="comment" class="form-label">Please Share Your Thought</label>
             <input type="text" class="form-control" id="comment"  name="comment" required>
         </div>
