--- a/views/movies/detail.ejs
+++ b/views/movies/detail.ejs
@@ -43,14 +43,12 @@
   </div>
 
   <h3>Movie Review</h3>
-  <!-- <% if (comments) { %>
-    <% comments.forEach((comment) => { %>
-        <p><%= comment.users.name %> <%= comment.createdAt %> </p>
+  <% for (let i = 0; i < comments.length; i++) { %>
+        <p><%= users[i].name %> <%= comments[i].createdAt %> </p>
         <div>
-            <%= comment.content %>
+            <%= comments[i].content %>
         </div>
-        <% })%>
- <% }%> -->
+ <% }%>
 
   <div class="mb-3">
     <form action="/comments" method ='POST'>
