--- a/views/movies/result.ejs
+++ b/views/movies/result.ejs
@@ -5,8 +5,8 @@
     <div class="row">
         <% movies.forEach((movie, i) => { %>  
       <div class="col-3">
-        <a href="/movies/<%= movie.imdbID %>" style="text-decoration: none"><p><%= i + 1 %>. <%= movie.Title %><p></a>
-        <a href="/movies/<%= movie.imdbID %>"><img src="<%= movie.Poster %>" alt="<%= movie.Title %>" height="200" width="auto" ></a>
+        <a href="/movies/<%= movie.imdbID %>" style="text-decoration: none" style="color:black"><p><%= i + 1 %>. <%= movie.Title %><p></a>
+        <a href="/movies/<%= movie.imdbID %>" style="color:black"><img src="<%= movie.Poster %>" alt="<%= movie.Title %>" height="200" width="auto" ></a>
       </div>
         
       <%}) %>
