fix the dusappearing comment user name bug

--- a/views/movies/detail.ejs
+++ b/views/movies/detail.ejs
@@ -63,11 +63,12 @@
                     </form>
                 </div>
             </div>
-            <% } %>
-    
         <%  } else { %> 
             <div><strong><%= users[i].name %> </strong> <small><%= comments[i].createdAt %> </small></div>
         <% } %> 
+    <% }  else { %> 
+        <div><strong><%= users[i].name %> </strong> <small><%= comments[i].createdAt %> </small></div>
+    <% } %> 
             <p><%= comments[i].content %></p>
  <% })%>
 
