--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -45,10 +45,15 @@
             <h3>Movies You May Like</h3>
         <div class="row">
             <% prediction.forEach((movie) => { %>
-          <div class="col-2">
-            <a href="/movies/<%= movie.imdbID %>"><img src="<%= movie.Poster %>" alt="<%= movie.Title %>" height="200" width="auto" ></a>
-            <a href="/movies/<%= movie.imdbID %>" style="text-decoration: none; color:black"><p><%= movie.Title %><p></a>
-          </div>
+            <%  if (movie.Poster == "N/A") { %>
+              <%     %>
+            <%  } else { %>
+                <div class="col-2">
+                  <a href="/movies/<%= movie.imdbID %>"><img src="<%= movie.Poster %>" alt="<%= movie.Title %>" height="200" width="auto" ></a>
+                  <a href="/movies/<%= movie.imdbID %>" style="text-decoration: none; color:black"><p><%= movie.Title %><p></a>
+                </div>
+            <%  } %>
+          
           <% }) %>
         </div>
         <% } %>
